// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package code instruction multiline to match the snapshot 1`] = `
<div>
  <label
    for="instruction-input_1"
  >
    foo_label
  </label>
  <div
    class="gl-relative"
  >
    <pre
      class="gl-font-monospace"
      data-testid="multiline-instruction"
    >
      this is somemultiline text
    </pre>
    <modal-copy-button-stub
      category="primary"
      class="gl-absolute gl-right-3 gl-top-3"
      container=""
      cssclasses=""
      id="reference-0"
      modalid=""
      target=""
      text="this is some
multiline text"
      title="Copy the command"
      tooltipplacement="top"
    />
  </div>
</div>
`;

exports[`Package code instruction single line to match the default snapshot 1`] = `
<div>
  <label
    for="reference-0"
  >
    foo_label
  </label>
  <div
    class="gl-mb-3"
  >
    <div
      class="gl-mb-3 input-group"
    >
      <input
        class="form-control gl-font-monospace"
        data-testid="instruction-input"
        id="reference-0"
        readonly=""
        type="text"
      />
      <span
        class="input-group-append"
        data-testid="instruction-button"
      >
        <modal-copy-button-stub
          category="primary"
          class="input-group-text"
          container=""
          cssclasses=""
          id="reference-1"
          modalid=""
          target=""
          text="npm i @my-package"
          title="Copy npm install command"
          tooltipplacement="top"
        />
      </span>
    </div>
  </div>
</div>
`;
